[[release-notes-5.10.0]]
== 5.10.0

*Date of Release:* ❓

*Scope:*

* Promotion of various experimental APIs to stable
* New `LauncherInterceptor` SPI
* New `testfeed` details mode for `ConsoleLauncher`
* New `ConsoleLauncher` subcommand for test discovery without execution
* Dry-run mode for test execution
* New `NamespacedHierarchicalStore` for use in third-party test engines
* Stacktrace pruning to hide internal JUnit calls
* New `@SelectMethod` support in test `@Suite` classes.
* New `TempDirFactory` SPI for customizing how temporary directories are created
* Failure threshold for `@RepeatedTest`
* New convenience base classes for implementing `ArgumentsProvider` and `ArgumentConverter`
* Custom class loader support for class/method selectors, `@MethodSource`, `@EnabledIf`,
  and `@DisabledIf`
* Improved configurability of parallel execution
* Numerous bug fixes and minor improvements

For a complete list of all _closed_ issues and pull requests for this release, consult the
link:{junit5-repo}+/milestone/65?closed=1+[5.10.0-M1],
link:{junit5-repo}+/milestone/69?closed=1+[5.10.0-RC1], and
link:{junit5-repo}+/milestone/70?closed=1+[5.10.0 GA] milestone pages in the JUnit
repository on GitHub.


[[release-notes-5.10.0-junit-platform]]
=== JUnit Platform

==== Deprecations and Breaking Changes

* Building native images with GraalVM now requires configuring the build arg
  `--initialize-at-build-time=org.junit.platform.launcher.core.LauncherConfig` and
  `--initialize-at-build-time=org.junit.jupiter.engine.config.InstantiatingConfigurationParameterConverter`.
* The `getMethodParameterTypes()` methods in `MethodSelector` and `NestedMethodSelector`
  have been deprecated and replaced by `getParameterTypeNames()` for greater clarity.

==== New Features and Improvements

* Various "experimental" APIs have been promoted to "stable", including
  `ModuleSelector`, `EngineDiscoveryListener`, `EngineDiscoveryRequestResolver`,