@@ -11,12 +11,20 @@
 package org.junit.platform.console.tasks;
 
 import java.io.PrintWriter;
+import java.util.Arrays;
+import java.util.List;
+import java.util.stream.Collectors;
+
+import com.github.difflib.text.DiffRow;
+import com.github.difflib.text.DiffRowGenerator;
 
 import org.junit.platform.commons.util.ExceptionUtils;
 import org.junit.platform.engine.TestExecutionResult;
 import org.junit.platform.engine.reporting.ReportEntry;
 import org.junit.platform.launcher.TestIdentifier;
 import org.junit.platform.launcher.TestPlan;
+import org.opentest4j.AssertionFailedError;
+import org.opentest4j.ValueWrapper;
 
 /**
  * @since 1.0
@@ -27,10 +35,19 @@ class FlatPrintingListener implements DetailsPrintingListener {
 
 	private final PrintWriter out;
 	private final ColorPalette colorPalette;
+	private final DiffRowGenerator diffRowGenerator;
 
 	FlatPrintingListener(PrintWriter out, ColorPalette colorPalette) {
 		this.out = out;
 		this.colorPalette = colorPalette;
+		this.diffRowGenerator = DiffRowGenerator.create() //
+				.showInlineDiffs(true) //
+				.mergeOriginalRevised(true) //
+				.inlineDiffByWord(true) //
+				.oldTag(f -> "~") //
+				.newTag(f -> "**") //
+				.build();
+		;
 	}
 
 	@Override
@@ -78,7 +95,29 @@ class FlatPrintingListener implements DetailsPrintingListener {
 	}
 
 	private void printlnException(Style style, Throwable throwable) {
+		if (throwable instanceof AssertionFailedError) {
+			AssertionFailedError assertionFailedError = (AssertionFailedError) throwable;
+			ValueWrapper expected = assertionFailedError.getExpected();
+			ValueWrapper actual = assertionFailedError.getActual();
+
+			if (isCharSequence(expected) && isCharSequence(actual)) {
+				printlnMessage(style, "Expected ", expected.getStringRepresentation());
+				printlnMessage(style, "Actual   ", actual.getStringRepresentation());
+				printlnMessage(style, "Diff     ", calculateDiff(expected, actual));
+			}
+		}
 		printlnMessage(style, "Exception", ExceptionUtils.readStackTrace(throwable));
+	}
+
+	private boolean isCharSequence(ValueWrapper value) {
+		return value != null && CharSequence.class.isAssignableFrom(value.getType());
+	}
+
+	private String calculateDiff(ValueWrapper expected, ValueWrapper actual) {
+		List<String> expectedLines = Arrays.asList(expected.getStringRepresentation());
+		List<String> actualLines = Arrays.asList(actual.getStringRepresentation());
+		List<DiffRow> diffRows = diffRowGenerator.generateDiffRows(expectedLines, actualLines);
+		return diffRows.stream().map(DiffRow::getOldLine).collect(Collectors.joining("\n"));
 	}
 
 	private void printlnMessage(Style style, String message, String detail) {
